k8s/local-llm/03-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-deployment
  namespace: llm
  labels:
    app: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      terminationGracePeriodSeconds: 120
      nodeSelector:
        nvidia.com/gpu.present: "true"
        # kubernetes.io/hostname: k3s-gpu-worker
      containers:
      - name: ollama
        image: ollama/ollama:0.20.5
        ports:
        - containerPort: 11434
          name: ollama-port
        resources:
          requests:
            nvidia.com/gpu: 1
            cpu: "2"
            memory: "24Gi"
          limits:
            nvidia.com/gpu: 1
            cpu: "4"
            memory: "30Gi"
        volumeMounts:
        - name: ollama-data
          mountPath: /root/.ollama
        livenessProbe:
          httpGet:
            path: /api/tags
            port: 11434
          periodSeconds: 20
          timeoutSeconds: 2
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /api/tags
            port: 11434
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 60
        readinessProbe:
          httpGet:
            path: /api/tags
            port: 11434
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 6

      volumes:
      - name: ollama-data
        persistentVolumeClaim:
          claimName: ollama-pvc


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openwebui-deployment
  namespace: llm
  labels:
    app: openwebui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openwebui
  template:
    metadata:
      labels:
        app: openwebui
    spec:
      containers:
      - name: openwebui
        image: ghcr.io/open-webui/open-webui:0.8.10
        ports:
        - containerPort: 8080
          name: openwebui-port
        resources:
          requests:
            cpu: "1"
            memory: "2Gi"
          limits:
            cpu: "2"
            memory: "4Gi"
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: 8080
        #   initialDelaySeconds: 20
        #   periodSeconds: 20
        #   timeoutSeconds: 3
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 8080
        #   periodSeconds: 5
        #   timeoutSeconds: 2
        #   failureThreshold: 6
        # startupProbe:
        #   httpGet:
        #     path: /
        #     port: openwebui-port
        #   failureThreshold: 30
        #   periodSeconds: 10
        volumeMounts:
          - name: open-webui-data
            mountPath: /app/backend/data

      volumes:
      - name: open-webui-data
        persistentVolumeClaim:
          claimName: openwebui-pvc
