k8s/local-llm/04-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: llm
  labels:
    app: ollama
spec:
  selector:
    app: ollama
  ports:
  - name: ollama
    port: 11434
    targetPort: ollama-port
    protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  namespace: llm
  labels:
    app: openwebui
spec:
  selector:
    app: openwebui
  ports:
  - name: openwebui
    port: 8080
    targetPort: openwebui-port
    protocol: TCP
  type: ClusterIP
